test/fail_compilation/imports/m10378b.d
module imports.m10378b;

string foo(int) { return "a"; }
